# kimchi-premium-krx-gold

./: README.md  ecos_환율_data.csv  pyproject.toml
.github/workflow/: daily-collect.yml
.github/workflows/: collect_data.yml  pytest.yml
data/: kimchi_gold_price_log.csv
src/kimchi_gold/: collect_price.py  now_price.py  plot.py
src/kimchi_premium/: __init__.py  main.py  utils.py
test_script/: api_test.py
tests/: main.py  test_collect_data.py  test_now_price.py
