[project]
name = "kimchi-premium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "김탱", email = "deepthought@postech.ac.kr" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[project.scripts]
kimchi-premium = "kimchi_premium.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
